--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+text-align: center;  
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+label{
+  font-size: 25px;
+  margin-right: 1%;
+}
+
+
+input{
+  height: 50px;
+  width: 250px;
   text-align: center;
+  font-size: 20px;
+  border-radius: 40px;
+  background: whitesmoke;
+  margin: 1% 0;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.showBox{
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
+  margin: 114px;
+  background: whitesmoke;
+  border: 2px solid black;
+  width: 1200px;
 }
 
-.App-link {
-  color: #61dafb;
+.button{
+  font-size: 22px;
+  padding: 0.5% ;
+
+  
+}
+.smallShowBox{
+  border: 2px solid black;
+  border-radius: 30px;
+  background: rgb(236, 151, 194);
+  height: 65px;
+  width: 462px;
+  margin: 20px;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
